[gd_scene load_steps=3 format=3 uid="uid://dhvfhytsvdvbp"]

[ext_resource type="Script" path="res://Scenes/TileContainer/tile_container.gd" id="1_3270l"]
[ext_resource type="PackedScene" uid="uid://cgte80bgyhj5t" path="res://Scenes/GhostTile/ghost_tile.tscn" id="2_mj6yk"]

[node name="TileContainer" type="Node3D"]
script = ExtResource("1_3270l")

[node name="TileHolder" type="Node3D" parent="."]

[node name="GhostTile" parent="TileHolder" instance=ExtResource("2_mj6yk")]

[node name="Label3d" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
